syntax = "proto3";

option csharp_namespace = "WorkshopApp.Proto.Client";
package workshop_app.proto.client.tasks;

import "Protos/enums.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service TasksService {
  rpc V1CreateTask(V1CreateTaskRequest) returns (V1CreateTaskResponse);
  rpc V1GetTask(V1GetTaskRequest) returns (V1GetTaskResponse);
  rpc V1AssignTask(V1AssignTaskRequest) returns (google.protobuf.Empty); 
}

message V1CreateTaskRequest {
  int64 user_id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}

message V1CreateTaskResponse {
  int64 task_id = 1;
}

message V1GetTaskRequest {
  int64 task_id = 1;
}

message V1GetTaskResponse {
  int64 task_id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.Int64Value assigned_to_user_id = 4;
  workshop_app.proto.client.enums.TaskStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
}

message V1AssignTaskRequest {
  int64 task_id = 1;
  int64 assignee_user_id = 2;
  int64 user_id = 3;
}
